--- a/public/output.css
+++ b/public/output.css
@@ -533,9 +533,6 @@ video {
   white-space: nowrap;
   border-width: 0;
 }
-.fixed {
-  position: fixed;
-}
 .absolute {
   position: absolute;
 }
@@ -558,11 +555,23 @@ video {
 .left-0 {
   left: 0px;
 }
+.left-6 {
+  left: 1.5rem;
+}
 .left-7 {
   left: 1.75rem;
 }
 .right-6 {
   right: 1.5rem;
+}
+.top-0 {
+  top: 0px;
+}
+.top-6 {
+  top: 1.5rem;
+}
+.top-\[29\%\] {
+  top: 29%;
 }
 .z-50 {
   z-index: 50;
@@ -571,17 +580,47 @@ video {
   margin-left: auto;
   margin-right: auto;
 }
-.mb-4 {
+.my-4 {
+  margin-top: 1rem;
   margin-bottom: 1rem;
 }
-.mt-9 {
-  margin-top: 2.25rem;
+.my-6 {
+  margin-top: 1.5rem;
+  margin-bottom: 1.5rem;
 }
-.mb-2 {
-  margin-bottom: 0.5rem;
+.my-8 {
+  margin-top: 2rem;
+  margin-bottom: 2rem;
 }
 .mb-1 {
   margin-bottom: 0.25rem;
+}
+.mb-12 {
+  margin-bottom: 3rem;
+}
+.mb-4 {
+  margin-bottom: 1rem;
+}
+.mb-8 {
+  margin-bottom: 2rem;
+}
+.ml-4 {
+  margin-left: 1rem;
+}
+.mt-10 {
+  margin-top: 2.5rem;
+}
+.mt-4 {
+  margin-top: 1rem;
+}
+.mt-6 {
+  margin-top: 1.5rem;
+}
+.mt-8 {
+  margin-top: 2rem;
+}
+.mt-9 {
+  margin-top: 2.25rem;
 }
 .flex {
   display: flex;
@@ -591,6 +630,15 @@ video {
 }
 .hidden {
   display: none;
+}
+.h-20 {
+  height: 5rem;
+}
+.h-3 {
+  height: 0.75rem;
+}
+.h-6 {
+  height: 1.5rem;
 }
 .h-\[57px\] {
   height: 57px;
@@ -614,6 +662,15 @@ video {
 .min-h-screen {
   min-height: 100vh;
 }
+.w-20 {
+  width: 5rem;
+}
+.w-3\/4 {
+  width: 75%;
+}
+.w-6 {
+  width: 1.5rem;
+}
 .w-\[200px\] {
   width: 200px;
 }
@@ -623,6 +680,13 @@ video {
 .w-\[60px\] {
   width: 60px;
 }
+.w-\[80\%\] {
+  width: 80%;
+}
+.w-fit {
+  width: -moz-fit-content;
+  width: fit-content;
+}
 .w-full {
   width: 100%;
 }
@@ -630,8 +694,14 @@ video {
   width: -moz-max-content;
   width: max-content;
 }
+.max-w-\[150px\] {
+  max-width: 150px;
+}
 .max-w-\[730px\] {
   max-width: 730px;
+}
+.flex-shrink-0 {
+  flex-shrink: 0;
 }
 .translate-x-\[143px\] {
   --tw-translate-x: 143px;
@@ -659,30 +729,35 @@ video {
 .flex-col {
   flex-direction: column;
 }
+.items-start {
+  align-items: flex-start;
+}
 .items-center {
   align-items: center;
 }
+.justify-end {
+  justify-content: flex-end;
+}
 .justify-between {
   justify-content: space-between;
+}
+.gap-10 {
+  gap: 2.5rem;
+}
+.gap-2 {
+  gap: 0.5rem;
+}
+.gap-4 {
+  gap: 1rem;
+}
+.gap-6 {
+  gap: 1.5rem;
 }
 .gap-7 {
   gap: 1.75rem;
 }
 .gap-8 {
   gap: 2rem;
-}
-.gap-4 {
-  gap: 1rem;
-}
-.divide-x > :not([hidden]) ~ :not([hidden]) {
-  --tw-divide-x-reverse: 0;
-  border-right-width: calc(1px * var(--tw-divide-x-reverse));
-  border-left-width: calc(1px * calc(1 - var(--tw-divide-x-reverse)));
-}
-.divide-x-2 > :not([hidden]) ~ :not([hidden]) {
-  --tw-divide-x-reverse: 0;
-  border-right-width: calc(2px * var(--tw-divide-x-reverse));
-  border-left-width: calc(2px * calc(1 - var(--tw-divide-x-reverse)));
 }
 .divide-y > :not([hidden]) ~ :not([hidden]) {
   --tw-divide-y-reverse: 0;
@@ -698,8 +773,18 @@ video {
 .rounded-lg {
   border-radius: 0.5rem;
 }
+.rounded-xl {
+  border-radius: 0.75rem;
+}
 .border {
   border-width: 1px;
+}
+.border-t-2 {
+  border-top-width: 2px;
+}
+.border-gray-border {
+  --tw-border-opacity: 1;
+  border-color: rgb(219 219 219 / var(--tw-border-opacity));
 }
 .border-light-gray {
   --tw-border-opacity: 1;
@@ -721,6 +806,10 @@ video {
   --tw-bg-opacity: 1;
   background-color: hsl(176 50% 47% / var(--tw-bg-opacity));
 }
+.bg-red-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
+}
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
@@ -733,8 +822,14 @@ video {
   --tw-gradient-to: rgb(0 0 0 / 0) var(--tw-gradient-to-position);
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
+.from-5\% {
+  --tw-gradient-from-position: 5%;
+}
 .to-transparent {
   --tw-gradient-to: transparent var(--tw-gradient-to-position);
+}
+.to-95\% {
+  --tw-gradient-to-position: 95%;
 }
 .object-cover {
   -o-object-fit: cover;
@@ -747,18 +842,24 @@ video {
 .p-12 {
   padding: 3rem;
 }
+.p-6 {
+  padding: 1.5rem;
+}
+.p-7 {
+  padding: 1.75rem;
+}
 .py-8 {
   padding-top: 2rem;
   padding-bottom: 2rem;
 }
+.pl-10 {
+  padding-left: 2.5rem;
+}
+.pr-6 {
+  padding-right: 1.5rem;
+}
 .pt-16 {
   padding-top: 4rem;
-}
-.pt-8 {
-  padding-top: 2rem;
-}
-.pt-7 {
-  padding-top: 1.75rem;
 }
 .pt-6 {
   padding-top: 1.5rem;
@@ -766,25 +867,44 @@ video {
 .text-center {
   text-align: center;
 }
+.font-bold {
+  font-weight: 700;
+}
 .font-medium {
   font-weight: 500;
+}
+.font-normal {
+  font-weight: 400;
+}
+.leading-\[30px\] {
+  line-height: 30px;
+}
+.text-black {
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity));
+}
+.text-dark-cyan {
+  --tw-text-opacity: 1;
+  color: hsl(176 72% 28% / var(--tw-text-opacity));
 }
 .text-dark-gray {
   --tw-text-opacity: 1;
   color: hsl(0 0% 48% / var(--tw-text-opacity));
 }
+.text-moderate-cyan {
+  --tw-text-opacity: 1;
+  color: hsl(176 50% 47% / var(--tw-text-opacity));
+}
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
-.shadow-lg {
-  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+.opacity-50 {
+  opacity: 0.5;
 }
-.shadow-md {
-  --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
+.shadow-custom {
+  --tw-shadow: 0 100px 140px -50px rgba(0,0,0,0.25), 0 0 20px 0 rgba(0,0,0,0.03);
+  --tw-shadow-colored: 0 100px 140px -50px var(--tw-shadow-color), 0 0 20px 0 var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 .shadow-sm {
@@ -814,6 +934,16 @@ video {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+html,
+body {
+  scroll-behavior: smooth;
+}
+
+/* Modal */
+#modal::backdrop {
+  background-color: rgb(0 0 0/0.4);
+}
+
 /* Fonts */
 .font-commissioner {
   font-family: "Commissioner", sans-serif;
@@ -829,6 +959,18 @@ video {
 .heading-2 {
   font-size: 28px;
   font-weight: 700;
+}
+
+.heading-3 {
+  font-size: 20px;
+  font-weight: 700;
+  line-height: 1;
+}
+
+.heading-4 {
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 1;
 }
 
 /* Buttons */
@@ -867,31 +1009,56 @@ video {
   background-color: hsl(176 72% 28% / var(--tw-bg-opacity));
 }
 
-.focus\:outline-none:focus {
+.button-nostock {
+  border-radius: 9999px;
+  padding-top: 1.25rem;
+  padding-bottom: 1.25rem;
+  padding-left: 2.5rem;
+  padding-right: 2.5rem;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke;
+  transition-duration: 400ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  font-weight: 500;
+  line-height: 1;
+  --tw-bg-opacity: 1;
+  background-color: hsl(0 0% 48% / var(--tw-bg-opacity));
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.focus-visible\:outline-none:focus-visible {
   outline: 2px solid transparent;
   outline-offset: 2px;
 }
 
-.focus\:ring-1:focus {
+.focus-visible\:ring-1:focus-visible {
   --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
   --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(1px + var(--tw-ring-offset-width)) var(--tw-ring-color);
   box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
 }
 
-.focus\:ring-blue-500:focus {
+.focus-visible\:ring-blue-500:focus-visible {
   --tw-ring-opacity: 1;
   --tw-ring-color: rgb(59 130 246 / var(--tw-ring-opacity));
 }
 
-.focus\:ring-offset-2:focus {
+.focus-visible\:ring-offset-2:focus-visible {
   --tw-ring-offset-width: 2px;
 }
 
-.focus\:ring-offset-black:focus {
+.focus-visible\:ring-offset-black:focus-visible {
   --tw-ring-offset-color: #000;
 }
 
 @media (min-width: 768px) {
+
+  .md\:mt-0 {
+    margin-top: 0px;
+  }
+
+  .md\:mt-9 {
+    margin-top: 2.25rem;
+  }
 
   .md\:grid-cols-3 {
     grid-template-columns: repeat(3, minmax(0, 1fr));
@@ -899,6 +1066,10 @@ video {
 
   .md\:flex-row {
     flex-direction: row;
+  }
+
+  .md\:items-center {
+    align-items: center;
   }
 
   .md\:gap-0 {
@@ -911,20 +1082,30 @@ video {
     border-left-width: calc(1px * calc(1 - var(--tw-divide-x-reverse)));
   }
 
-  .md\:divide-x-0 > :not([hidden]) ~ :not([hidden]) {
-    --tw-divide-x-reverse: 0;
-    border-right-width: calc(0px * var(--tw-divide-x-reverse));
-    border-left-width: calc(0px * calc(1 - var(--tw-divide-x-reverse)));
-  }
-
   .md\:divide-y-0 > :not([hidden]) ~ :not([hidden]) {
     --tw-divide-y-reverse: 0;
     border-top-width: calc(0px * calc(1 - var(--tw-divide-y-reverse)));
     border-bottom-width: calc(0px * var(--tw-divide-y-reverse));
   }
 
+  .md\:p-12 {
+    padding: 3rem;
+  }
+
+  .md\:p-9 {
+    padding: 2.25rem;
+  }
+
   .md\:pt-0 {
     padding-top: 0px;
+  }
+
+  .md\:pt-11 {
+    padding-top: 2.75rem;
+  }
+
+  .md\:pt-9 {
+    padding-top: 2.25rem;
   }
 }
 
